--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             margin: 0;
         }
     </style>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#4f46e5">
 </head>
 
 <body class="bg-slate-50 text-slate-900">
