--- a/index.html
+++ b/index.html
@@ -23,10 +23,23 @@
         }
     </style>
     <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#4f46e5">
+    <script>
+        // FOUC Prevention & Early Theme Detection
+        (function () {
+            try {
+                const theme = localStorage.getItem('theme');
+                const supportDarkMode = window.matchMedia('(prefers-color-scheme: dark)').matches;
+                if (theme === 'dark' || (!theme && supportDarkMode)) {
+                    document.documentElement.classList.add('dark');
+                    document.querySelector('meta[name="theme-color"]').setAttribute('content', '#0f172a');
+                }
+            } catch (e) { }
+        })();
+    </script>
+    <meta name="theme-color" content="#f8fafc">
 </head>
 
-<body class="bg-slate-50 text-slate-900">
+<body class="bg-primary text-primary transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
